test/fails/ir/missvar.ir.interpret
Tried to look up fictitious variable "poo".
